# hangman-data

./: .env  Cargo.toml
migrations/20160510144045_create_tokens_table/: up.sql
migrations/20160510154954_create_games_table/: up.sql
sql/game/: by_id.sql  create.sql  latest.sql  page.sql  update.sql  update_outcome.sql  update_state.sql
sql/token/: by_id.sql  by_token.sql  create.sql  record.sql
src/: lib.rs  models.rs
src/error/: db_error.rs  mod.rs
src/model/: difficulty.rs  game.rs  mod.rs  outcome.rs  record.rs  token.rs
src/service/: connection.rs  game.rs  mod.rs  page.rs  token.rs
