[package]
name = "hangman-data"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
diesel = {git = "https://github.com/diesel-rs/diesel"}
diesel_codegen = { git = "https://github.com/diesel-rs/diesel", default-features = false, features = ["nightly", "postgres"] }
dotenv = "*"
dotenv_macros = "*"